# FourHeadIntrinsics

./: .gitignore  README.md  pyproject.toml
camera_extrinsics/: 3dmotion_T_H_C_snippet.yaml  README.md  four_head_camera_extrinsics.yaml  manual_camera_centers.yaml
camera_extrinsics/templates/: four_head_camera_extrinsics.yaml
camera_intrinsics/: README.md
configs/: four_head_rig.yaml
docs/: 3dmotion_calibration_workflow.md  a4_tiled_aprilgrid_plan.md  fisheye_intrinsics_workflow.md  kalibr_report_guide.md  workflow.md
imu_calibration/: README.md  imu_extrinsics.yaml
scripts/: align_kalibr_rig_to_head.py  analyze_experiments.py  analyze_imu_jsonl.py  calibrate_camera.py  calibrate_imu_static.py  calibrate_rig.py  capture_camera.py  capture_multicam_extrinsics.py  check_multicam_capture.py  diagnose_aprilgrid_images.py  export_3dmotion_camera_extrinsics.py  export_3dmotion_cameras_yaml.py  export_imu_extrinsics_template.py  export_imu_noise_yaml.py  export_kalibr_extrinsics.py  export_kalibr_imu_yaml.py  export_rig_yaml.py  filter_multicam_aprilgrid_frames.py  fit_wrist_imu_to_bracelet_rotation.py  generate_kalibr_aprilgrid.py  generate_kalibr_aprilgrid_artwork.py  images_imu_to_kalibr_bag.py  images_to_multicam_rosbag.py  images_to_rosbag.py  import_kalibr_camchain_to_3dmotion.py  kalibr_calibrate_cameras_with_init.py  kalibr_docker.sh  kalibr_pass_rate.py  kalibr_reprojection_rms.py  list_cameras.py  make_camera_dirs.py  merge_multicam_experiments_to_rosbag.py  select_multicam_aprilgrid_observations.py  undistort_kalibr_ds.py  update_aprilgrid_measurement.py
(+20 files in other folders)
