[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fourhead-intrinsics"
version = "0.1.0"
description = "Fisheye and omnidirectional calibration helpers for a four-camera head-mounted rig."
requires-python = ">=3.10"
dependencies = [
  "opencv-contrib-python>=4.9",
  "numpy>=1.26",
  "PyYAML>=6.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
