[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vimas-calibration"
version = "0.1.0"
description = "VIMAS head/wrist camera and IMU calibration toolkit."
requires-python = ">=3.10"
dependencies = [
  "opencv-contrib-python>=4.9",
  "numpy>=1.26",
  "PyYAML>=6.0",
]

[project.optional-dependencies]
ble = [
  "bleak>=0.22",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
